--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>タイトル</title>
+    <title>portfolio</title>
   </head>
   <body>
     <!-- ここに書きたい内容を書く -->
