--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <title>Ilekaede_ポートフォリオ</title>
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js" defer></script>
   </head>
   <body>
     <!-- ここに書きたい内容を書く -->
-    Hello, world!
+    <div id="loading">
+      <img class="spinner" src="img/img1.jpg" alt="" />
+    </div>
+
+    <!--コンテンツ-->
+    <div class="gallery">
+      
+      <div class="item">
+        <img src="img/img1.jpg" alt="">
+      </div>
+
+    </div>
   </body>
 </html>
