add: 画像を3枚追加，アニメーションを追加

--- a/index.html
+++ b/index.html
@@ -1,25 +1,47 @@
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-    <title>Ilekaede_ポートフォリオ</title>
-    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" defer></script>
-  </head>
-  <body>
-    <!-- ここに書きたい内容を書く -->
-    <div id="loading">
-      <img class="spinner" src="img/img1.jpg" alt="" />
-    </div>
 
-    <!--コンテンツ-->
-    <div class="gallery">
-      
-      <div class="item">
-        <img src="img/img1.jpg" alt="">
-      </div>
+<head>
+  <meta charset='utf-8'>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ilekaede_公式サイト</title>
+  <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.google.apis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap" rel="stylesheet">
+  <script src="js/script.js" defer></script>
+  <link rel="icon" href="img/img1.jpg">
+</head>
 
-    </div>
-  </body>
+<body>
+  <!-- ここに書きたい内容を書く -->
+  <!-- <div id="loader">
+      Now Loading...
+    </div> -->
+
+  <!-- コンテンツ -->
+  <div align="right">
+    <button id="btn">ダークモードにする</button>
+  </div>
+
+
+  <div>
+    <h1>Ilekaede page</h1>
+    <h2>静岡大学情報学部</h2>
+  </div>
+
+  <!-- <p>
+      外部リンク
+      github : <a href="https://github.com/Ilekaede" target="_blank", rel="nofollow">https://github.com/Ilekaede</a> 
+    </p> -->
+
+  
+  <div class='img-container'>
+    <li><img src="img/img3.jpg" alt=""></li>
+    <li><img src="img/img2.jpg" alt=""></li>
+    <li><img src="img/img1.jpg" alt=""></li>
+  </div>
+
+</body>
+
 </html>
